<?xml version="1.0"?>
<package>
  <name>beginner_tut</name>
  <version>0.0.0</version>
  <description>The beginner_tut package</description>

  <maintainer email="epsilonorion@gmail.com">Joshua Weaver</maintainer>

  <license>BSD</license>

  <!-- <url type="website">http://ros.org/wiki/beginner_tut</url> -->

  <author email="epsilonorion@gmail.com">Joshua Weaver</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>

  <export>

  </export>
</package>
