<?xml version="1.0"?>
<package format="2">
  <name>gtest_tut</name>
  <version>0.0.0</version>
  <description>The gtest_tut package</description>

  <maintainer email="epsilonorion@gmail.com">Joshua Weaver</maintainer>

  <license>BSD</license>

  <!-- <url type="website">http://wiki.ros.org/gtest_tut</url> -->

  <author email="epsilonorion@gmail.com">Joshua Weaver</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>

  </export>
</package>
