<?xml version="1.0"?>
<package>
  <name>smach_tut</name>
  <version>0.0.0</version>
  <description>The smach_tut package</description>

  <maintainer email="epsilonorion@gmail.com">Joshua Weaver</maintainer>

  <license>TODO</license>

  <!-- <url type="website">http://ros.org/wiki/smach</url> -->

  <author email="epsilonorion@gmail.com">Joshua Weaver</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>smach</build_depend>
  <build_depend>smach_ros</build_depend>
  <build_depend>action_tut</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>smach</run_depend>
  <run_depend>smach_ros</run_depend>
  <run_depend>action_tut</run_depend>

  <export>
  </export>
</package>
